[workspace]
resolver = "2"

members = [
    "vm-bindings",
    "vm-runtime",
    "vm-client-desktop",
    "vm-client-desktop-cli",
    "vm-client-android",
    "vm-client-tests",
    "vm-client-test-library",
    "vm-library-tester",
]

exclude = ["target", "third_party", "libs"]

[profile.release]
rpath = false

[profile.dev]
rpath = false

[profile.test]
rpath = false

[profile.bench]
rpath = false