[workspace]
resolver = "2"

members = [
    "vm-bindings",
    "vm-runtime",
    "vm-client-desktop",
    "vm-client-desktop-cli",
    "vm-client-android",
    "vm-client-tests",
    "vm-client-test-library",
    "vm-library-tester",
    "vm-object-model",
    "vm-object-model-derive"
]

exclude = ["target", "third_party", "libs"]

[profile.release]
rpath = false
debug = true

[profile.dev]
rpath = false
debug = true

[profile.test]
rpath = false
debug = true

[profile.bench]
rpath = false
debug = true