[package]
name = "vm-bindings"
version = "0.1.0"
authors = ["feenk gmbh. <contact@feenk.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
libffi = { version = "2.0", optional = true }
libffi-sys = { version = "1.3", optional = true }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[features]
default = ["full"]
# The minimally working VM without ffi and most plugins
minimal = ["file_plugin", "file_attributes_plugin", "misc_primitive_plugin"]
# Enables all plugins
all_plugins = [
    "b2d_plugin",
    "bit_blt_plugin",
    "dsa_primitives_plugin",
    "file_plugin",
    "file_attributes_plugin",
    "float_array_plugin",
    "jpeg_read_writer2_plugin",
    "jpeg_reader_plugin",
    "large_integers_plugin",
    "locale_plugin",
    "misc_primitive_plugin",
    "socket_plugin",
    "squeak_ssl_plugin",
    "surface_plugin",
    "unix_os_process_plugin",
    "uuid_plugin" ]
# Enables all features, such as ffi and all plugins
full = ["immutability", "inline_memory_accessors", "ffi", "threaded_ffi", "all_plugins"]
gnuisation = []
# Include primitives to make objects readonly
immutability = []
# Use static inline functions when the compiler produces efficient code for small accessors.
inline_memory_accessors = []
ffi = [ "libffi", "libffi-sys" ]
threaded_ffi = ["ffi"]
# VM Plugins
b2d_plugin = []
bit_blt_plugin = []
dsa_primitives_plugin = []
file_plugin = []
file_attributes_plugin = ["file_plugin"]
float_array_plugin = []
jpeg_read_writer2_plugin = []
jpeg_reader_plugin = []
large_integers_plugin = []
locale_plugin = []
misc_primitive_plugin = []
socket_plugin = []
squeak_ssl_plugin = []
surface_plugin = []
unix_os_process_plugin = ["file_plugin", "socket_plugin"]
uuid_plugin = []

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.1.0"
ndk-sys = "0.1.0"
ndk-glue = "0.1.0"

[build-dependencies]
bindgen = "0.59"
fs_extra = "1.1.0"
to_absolute = "0.1"
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
which = "4.1.0"
titlecase = "1.1.0"
file-matcher = "0.5.0"
cc = { git = "https://github.com/syrel/cc-rs", rev = "2794bd456cd7ecf75e5bc79c2499a8eb9920f0a2" }
new_string_template = "1.0"
regex = "1.5.4"
pkg-config = "0.3.24"
strum = { version = "0.23", features = ["derive"] }
git2 = "0.13"
anyhow = "1.0"
chrono = "0.4"
semver = { version = "1", features = [ "serde" ] }
user-error = "1.2"
clang-sys = "1.3"
console = { version = ">=0.9.1, <1.0.0", default-features = false }
tokio = { version = "1.0", features = ["full"] }
downloader = { git = "https://github.com/feenkcom/build-helpers-rs" }
unzipper = { git = "https://github.com/feenkcom/build-helpers-rs" }
commander = { git = "https://github.com/feenkcom/build-helpers-rs" }
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"