[package]
name = "vm-builder"
version = "0.1.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2018"

[[bin]]
name = "vm-builder"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
fs_extra = "1.1.0"
rustc_version = "0.2"
mustache = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
url = "2.2.2"
which = "4.1.0"
user-error = "1.2.8"
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
feenk-releaser = { git = "https://github.com/feenkcom/releaser-rs", rev = "f09581d4d691343f98757b58ca247884d931b321" }