[package]
name = "vm-client-desktop-cli"
version = "0.5.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"
description = "GToolkit VM CLI"

[[bin]]
name = "vm_client-cli"
path = "src/main.rs"

[dependencies]
vm-runtime = { path = "../vm-runtime" }
clap = { version = "4.1", features = [ "derive", "string", "color" ] }
log = "0.4"
env_logger = "0.10"

[build-dependencies]
embed-resource = "2.4"