[package]
name = "vm-client-desktop"
version = "0.5.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"
description = "GToolkit VM"

[[bin]]
name = "vm_client"
path = "src/main.rs"

[dependencies]
vm-runtime = { path = "../vm-runtime" }
clap = { version = "4.1", features = [ "derive", "string", "color" ] }
log = "0.4"
env_logger = "0.10"
user-error = "1.2"
to_absolute = "0.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9"
libloading = "0.8"
libc = "0.2"

# pathos is used to detect home directory of the app on iOS
[target.'cfg(target_os="ios")'.dependencies]
pathos = "0.3"

# nfd2 is only supported by desktop OS
[target.'cfg(not(any(target_os="ios", target_os="android", target_arch = "wasm32")))'.dependencies]
native-dialog = { version = "0.7", optional = true }

[features]
default = [ "image_picker", "error-dialog" ]
# Shows an error message on Error, rather than just printing to stderrr
error-dialog = [ "dep:native-dialog" ]
# Shows an .image file picker dialog.
# Only supported by desktop targets
image_picker = [ "dep:native-dialog" ]

[build-dependencies]
embed-resource = "2.4"