[package]
name = "vm-client"
version = "0.1.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"
description = "GToolkit VM"

[[bin]]
name = "vm_client"
path = "src/main.rs"

[[bin]]
name = "vm_client-cli"
path = "src/main_cli.rs"

[dependencies]
vm-bindings = { path = "../vm-bindings", default-features = false }
nfd2 = "0.3"
clap = { version = "3.0", features = [ "derive"] }
thiserror = "1.0"
dirs = "3.0"
log = "0.4"
user-error = "1.2"
to_absolute = "0.1"
anyhow = "1.0"
libffi = "2.0"
num = "0.4"
num-traits = "0.2"

[features]
default = ["full"]
minimal = ["vm-bindings/minimal"]
full = ["vm-bindings/full"]

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9.1"
libloading = "0.7"
libc = "0.2"

[build-dependencies]
embed-resource = "1.6"