[package]
name = "vm-client"
version = "0.4.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"
description = "GToolkit VM"

[[bin]]
name = "vm_client"
path = "src/main.rs"

[[bin]]
name = "vm_client-cli"
path = "src/main_cli.rs"

[dependencies]
vm-bindings = { path = "../vm-bindings", default-features = false }
clap = { version = "3.0", features = [ "derive"] }
thiserror = "1.0"
dirs = "3.0"
log = "0.4"
env_logger = "0.9"
default-env = "0.1"
user-error = "1.2"
to_absolute = "0.1"
anyhow = "1.0"
num = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
chrono = "0.4"
json = "0.12"
libffi = { version = "3.1", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9.1"
libloading = "0.7"
libc = "0.2"

# pathos is used to detect home directory of the app on iOS
[target.'cfg(target_os="ios")'.dependencies]
pathos = "0.3"

# nfd2 is only supported by desktop OS
[target.'cfg(not(any(target_os="ios", target_arch = "wasm32")))'.dependencies]
nfd2 = { version = "0.3", optional = true }
comfy-table = { version = "6.0", optional = true }
colored = { version = "2", optional = true }

[features]
default = [ "full" ]
full = [ "jit", "full_without_jit" ]
full_without_jit = [ "vm-bindings/full_without_jit", "ffi", "colored_terminal", "image_picker" ]
minimal = [ "vm-bindings/minimal" ]
ffi = [ "vm-bindings/ffi", "libffi" ]
jit = [ "vm-bindings/jit" ]
# Prettifies terminal output by adding colors or using ascii art.
# Only supported by desktop targets
colored_terminal = [ "colored", "comfy-table" ]
# Shows an .image file picker dialog.
# Only supported by desktop targets
image_picker = [ "nfd2" ]

[build-dependencies]
embed-resource = "1.6"
