[package]
name = "vm-runtime"
version = "0.1.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"

[dependencies]
vm-bindings = { path = "../vm-bindings", default-features = false }
default-env = "0.1"
to_absolute = "0.1"
anyhow = "1.0"
num = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
chrono = "0.4"
json = "0.12"
thiserror = "1.0"
dirs = "5.0"
log = "0.4"
libc = "0.2"
libffi = { version = "3.1", optional = true }
widestring = "1.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9.1"
libloading = "0.8"

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.4.1", features = [ "native-activity" ] }

# wasm does not support colored terminal and tables
[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
comfy-table = { version = "7.1", optional = true }
colored = { version = "2", optional = true }

[features]
default = [ "full" ]
full = [ "jit", "full_without_jit" ]
full_without_jit = [ "vm-bindings/full_without_jit", "ffi", "colored_terminal" ]
minimal = [ "vm-bindings/minimal" ]
ffi = [ "vm-bindings/ffi", "libffi" ]
jit = [ "vm-bindings/jit" ]
# Prettifies terminal output by adding colors or using ascii art.
# Only supported by desktop targets
colored_terminal = [ "colored", "comfy-table" ]