[package]
name = "vm-runtime"
version = "0.1.0"
authors = ["feenk gmbh. contact@feenk.com>"]
edition = "2021"

[dependencies]
vm-bindings = { path = "../vm-bindings", default-features = false }
vm-object-model = {path = "../vm-object-model" }
vm-object-model-derive = {path = "../vm-object-model-derive" }
vec_map = "0.8"
fxhash = "0.2"
default-env = "0.1"
paste = "1.0"
to_absolute = "0.1"
anyhow = "1.0"
num = "0.4"
num-traits = "0.2"
strum = "0.27"
strum_macros = "0.27"
lazy_static = "1.4"
once_cell = "1.20"
chrono = "0.4"
json = "0.12"
thiserror = "2.0"
dirs = "5.0"
log = "0.4"
libc = "0.2"
libffi = { version = "3.1", optional = true }
widestring = "1.1"
byte_string = "1.0"
bitfield-struct = "0.10"
parking_lot = "0.12"
num-derive = "0.4"
enum-display = "0.2"
zerocopy = "0.8"
user-error = "1.2"
libloading = "0.8"
#pharo-compiler = { path = "../../pharo-compiler-rs/pharo-compiler", optional = true }
#tonel = { path = "../../pharo-tonel-rs/tonel", optional = true }
#ston = { path = "../../pharo-tonel-rs/ston", optional = true }
#tonel-loader = { path = "../../pharo-tonel-rs/tonel-loader", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9.1"

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6", features = [ "native-activity" ] }

# wasm does not support colored terminal and tables
[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
comfy-table = { version = "7.1", optional = true }
colored = { version = "2", optional = true }

[features]
default = [ "full" ]
# tonel = [ "dep:tonel", "dep:tonel-loader", "dep:ston" ]
full = [ "jit", "full_without_jit" ]
full_without_jit = [ "vm-bindings/full_without_jit", "ffi", "colored_terminal" ]
minimal = [ "vm-bindings/minimal" ]
ffi = [ "vm-bindings/ffi", "libffi" ]
jit = [ "vm-bindings/jit" ]
# Prettifies terminal output by adding colors or using ascii art.
# Only supported by desktop targets
colored_terminal = [ "colored", "comfy-table" ]